--- a/README.html
+++ b/README.html
@@ -7,23 +7,16 @@ microcontrollers</i>, and integrated into other projects just like traditional
 single chip microcontrollers.</p>
 <h2>News</h2>
 <ul>
-<li>1 January 2024 -- I have decided to freeze all development for 32-bit
-kernels. The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit
+<li>1 January 2024 -- I have decided to suspend active development for 32-bit
+platforms. The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit
 Raspberry Pi 1 and 2 kernels are frozen at 5.15.92. The frozen 32-bit kernels
-will still be rebuilt regularly to incorporate userland improvements.<br>
-The 64-bit Raspberry Pi 3 and 4 kernels have been upgraded to 6.1.69 and will
-track <a href=
+and thin servers will still be rebuilt regularly to incorporate userland
+improvements. The <b><tt>muntsos-dev</tt></b> package has been updated to only
+pull in 64-bit AArch toolchains.</li>
+<li>1 January 2024 -- The 64-bit Raspberry Pi 3 and 4 kernels have been
+upgraded to 6.1.69 and will track <a href=
 "https://github.com/raspberrypi/linux">https://github.com/raspberrypi/linux</a>
 again.</li>
-<li>3 January 2024 -- Testing has revealed that something is broken in either
-the Raspberry Pi 1 kernel or its toolchain. The latest Raspberry Pi 1 kernel
-boots, but <b><tt>sshd</tt></b> rejects incoming connections for no discernable
-reason. Something similar happened when I moved from GCC 8 to GCC 10. I don't
-have time to deal with a problem like this on an obsolete platform, so I'm
-dropping support for all 32-bit Raspberry Pi models. Kernels, extensions, and
-Thin Servers currently published at <a href=
-"http://repo.munts.com/muntsos">http://repo.munts.com/muntsos</a> will be left
-for awhile.</li>
 <li>6 January 2024 -- Added a libusb extension package. It just installs
 <b><tt>/usr/local/lib/libusb-1.0.so.0</tt></b>, which is no longer included in
 the kernel RAM file system.</li>
@@ -37,11 +30,18 @@ extension package naming scheme has updated to be more meaningful for all
 platforms:
 <p><b><tt>dma-muntsos-BeagleBone.deb</tt></b> becomes
 <b><tt>dma-muntsos-armhf-beaglebone.deb</tt></b><br>
+<b><tt>dma-muntsos-RaspberryPi1.deb</tt></b> becomes
+<b><tt>dma-muntsos-armhf-raspberrypi1.deb</tt></b><br>
 <b><tt>dma-muntsos-RaspberryPi2.deb</tt></b> becomes
 <b><tt>dma-muntsos-armhf-raspberrypi2.deb</tt></b><br>
 <b><tt>dma-muntsos-RaspberryPi3.deb</tt></b> becomes
 <b><tt>dma-muntsos-aarch64.deb</tt></b></p>
 </li>
+<li>7 January 2024 -- Except for porting MuntsOS to the Raspberry Pi 5, which
+is ongoing, I have caught up with my backlog of improvements and fixes. Among
+other things, the MuntsOS startup scripts (<b><tt>/etc/rc</tt></b>) and friends
+have been extensively reworked to prevent race conditions. These changes also
+improve the system boot time.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
