Removed BeagleBone section.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21738 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -9,17 +9,20 @@ single chip microcontrollers.</p>
 <ul>
 <li>1 January 2024 -- I have decided to suspend active development for 32-bit
 platforms. The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit
-Raspberry Pi 1 and 2 kernels are frozen at 5.15.92. The frozen 32-bit kernels
-and thin servers will still be rebuilt regularly to incorporate userland
-improvements. The <b><tt>muntsos-dev</tt></b> package has been updated to only
-pull in 64-bit AArch toolchains.</li>
+Raspberry Pi 1 and 2 kernels are frozen at 5.15.92. The 32-bit extensions,
+kernels and thin servers will still be rebuilt from time to time to incorporate
+userland improvements. The <b><tt>muntsos-dev</tt></b> package has been updated
+to only pull in 64-bit AArch toolchains.</li>
+<br>
 <li>1 January 2024 -- The 64-bit Raspberry Pi 3 and 4 kernels have been
 upgraded to 6.1.69 and will track <a href=
 "https://github.com/raspberrypi/linux">https://github.com/raspberrypi/linux</a>
 again.</li>
+<br>
 <li>6 January 2024 -- Added a libusb extension package. It just installs
 <b><tt>/usr/local/lib/libusb-1.0.so.0</tt></b>, which is no longer included in
 the kernel RAM file system.</li>
+<br>
 <li>6 January 2024 -- In the course of porting MuntsOS to the 64-bit <a href=
 "https://www.raspberrypi.com/products/raspberry-pi-5">Raspberry Pi 5</a> and
 the <a href=
@@ -41,7 +44,8 @@ platforms:
 is ongoing, I have caught up with my backlog of improvements and fixes. Among
 other things, the MuntsOS startup scripts (<b><tt>/etc/rc</tt></b>) and friends
 have been extensively reworked to prevent race conditions. These changes also
-improve the system boot time.</li>
+improve the system boot time. Support for the Raspberry 5 and the Orange Pi
+Zero 2 W is under development.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
@@ -135,7 +139,7 @@ desired, before inserting it in the target board. After booting MuntsOS, log in
 from the console or via SSH (user "<b><tt>root</tt></b>", password
 "<b><tt>default</tt></b>") and run <b><tt>sysconfig</tt></b> to perform more
 system configuration.</p>
-<p><i>Note: BeagleBone boards require the <a href=
+<p><i>Note: Some platforms require the <a href=
 "https://en.wikipedia.org/wiki/Boot_flag">boot flag</a> to be set on the FAT32
 boot partition on the SD card or on-board eMMC. The ROM boot loader in the CPU
 will ignore any partitions that are not marked as bootable.</i></p>
@@ -148,155 +152,13 @@ contain more detailed instructions about how to install a MuntsOS Thin Server.
 <p><a href=
 "http://repo.munts.com/muntsos/thinservers">http://repo.munts.com/muntsos/thinservers</a></p>
 <h2>Boards</h2>
-<h3>BeagleBone</h3>
-<p>The <a href="http://beagleboard.org/bone-original">BeagleBone</a> was one of
-the first low cost Linux microcomputers. It originally sold for USD $89 at its
-launch in October 2011.</p>
-<p>The BeagleBone has a Texas Instruments <a href=
-"http://www.ti.com/product/AM3359">Sitara AM3359</a> processor running at 720
-MHz and 256 MB of RAM. It has two USB port sockets: One type A host port and
-one type mini-B device port. Unlike any of its successors, the original
-BeagleBone has its USB device port connected to a USB hub instead of directly
-to the AM3359. Three distinct USB devices are visible to the host on the device
-port socket: The AM3359 device port, a USB JTAG device, and a USB serial port
-device connected to the AM3359 console serial port. The BeagleBone also has two
-<a href="http://beagleboard.org/pru">PRU</a> (Programmable Realtime Unit) I/O
-processors on board that are capable of very fast I/O operations.</p>
-<p>MuntsOS includes device tree overlays than can be enabled by
-<b><tt>sysconfig</tt></b> that allow configuring any of the expansion header
-GPIO pins with <b><tt>config-pin</tt></b>. The system startup script
-<b><tt>/etc/rc</tt></b> will initialize GPIO pin modes according to
-<b><tt>/etc/pinmux.conf</tt></b>. By default, the following devices are are
-enabled on the two 46-pin <a href=
-"http://git.munts.com/muntsos/doc/BeagleBonePinout.pdf">expansion
-headers</a>:</p>
-<ul>
-<li>I<sup>2</sup>C bus controller device <b><tt>/dev/i2c-2</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS1</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS2</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS4</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS5</tt></b></li>
-<li>SPI slave device <b><tt>/dev/spidev2.0</tt></b></li>
-<li>SPI slave device <b><tt>/dev/spidev2.1</tt></b></li>
-</ul>
-<p>Newly manufactured BeagleBone boards assembled with a 1 GHz AM3358 processor
-are apparently still available from <a href=
-"https://specialcomp.com/beagleboard/bone.htm">Special Computing</a>.</p>
-<h3>BeagleBone Black</h3>
-<p>The <a href="http://beagleboard.org/black">BeagleBone Black</a> is a cost
-reduced version of the BeagleBone. It currently sells for about USD $55. The
-BeagleBone Black originally sold for USD $45 at its launch in April 2013, which
-would have been an impressive feat except that the Raspberry Pi had already
-arrived on the market a few months earlier at USD $35. Although the BeagleBone
-Black was more capable than the first couple of Raspberry Pi generations, it
-has been overshadowed by the Raspberry Pi Model 2 and 3, which sport quad-core
-processors. The great strength of the BeagleBone Black and its kin compared to
-the Raspberry Pi family is the sheer number of GPIO pins and peripheral ports
-available on its two 46-pin <a href=
-"http://git.munts.com/muntsos/doc/BeagleBonePinout.pdf">expansion headers</a>.
-Even after eMMC, I<sup>2</sup>C, SPI, and UART pins have been allocated, there
-are 42 GPIO pins available.</p>
-<p>The BeagleBone Black has a Texas Instruments <a href=
-"http://www.ti.com/product/AM3358">Sitara AM3358</a> processor running at 1
-GHz, 512 MB of RAM and 4 GB eMMC flash on board. It uses the same kernel as the
-BeagleBone, with a different device tree.</p>
-<p>Unlike the original BeagleBone (above) and the BeagleBone Green (below), the
-BeagleBone Black has an HDMI video output (though with a pesky micro HDMI
-connecteor). The HDMI interface consumes a large number of GPIO pins when it is
-enabled. This MuntsOS port does not enable the HDMI interface.</p>
-<h3>BeagleBone Black Wireless</h3>
-<p>The <a href="https://beagleboard.org/black-wireless">BeagleBone Black
-Wireless</a> is a variant of the BeagleBone Black that has replaced the wired
-Ethernet interface with a built-in Wifi radio. It also has replaced the mini-B
-slave USB receptacle with a more modern micro-B receptacle. It is otherwise
-highly compatible with the BeagleBone Black. It sells for about USD $70,
-considerably more than any of the other boards supported by MuntsOS, and also
-considerably more than a BeagleBone Green plus a USB WiFi adapter.</p>
-<p>The BeagleBone Black Wireless uses the same kernel as the BeagleBone, with a
-different device tree.</p>
-<p>MuntsOS does not currently support the on-board Bluetooth radio.</p>
-<h3>BeagleBone Green</h3>
-<p>The <a href="https://beagleboard.org/green">BeagleBone Green</a> is a cost
-reduced version of the BeagleBone Black, from Chinese manufacturer <a href=
-"https://www.seeedstudio.com">Seeed Studio</a>, that sells for about USD $44.
-Changes from the BeagleBone Black design are:</p>
-<ul>
-<li>Removed coaxial power jack . (+5V can be supplied via the slave USB port or
-<b>P9</b> expansion header instead.)</li>
-<li>Removed HDMI receptacle and support circuitry.</li>
-<li>Changed the slave USB receptacle from mini-B to micro-B.</li>
-<li>Added two <a href="http://wiki.seeed.cc/Grove_System">Grove System</a>
-connectors, one carrying 3.3V <a href=
-"https://en.wikipedia.org/wiki/I2C">I<sup>2</sup>C</a> signals and one carrying
-3.3V logic level <a href="https://en.wikipedia.org/wiki/Serial_port">serial
-port</a> signals.</li>
-</ul>
-<p>The BeagleBone Green uses the same kernel as the BeagleBone, with a
-different device tree.</p>
-<p>The BeagleBone Green is cost competitive with the Raspberry Pi, costing only
-a little more but including on board eMMC and a USB cable. It has only a single
-core processor, compared to the quad-core Raspberry Pi 3, but provides many
-more GPIO pins on its two 46-pin <a href=
-"http://git.munts.com/muntsos/doc/BeagleBonePinout.pdf">expansion headers</a>.
-It also has separate dedicated host and slave USB ports as well as the two
-Grove sockets.</p>
-<p>The BeagleBone Green plus a USB WiFi adapter is about USD $20 cheaper than a
-BeagleBone Black Wireless, while retaining the possibility for wired
-Ethernet.</p>
-<h3>BeagleBone Green Wireless</h3>
-<p>The <a href="https://beagleboard.org/green-wireless">BeagleBone Green
-Wireless</a> is a variant of the BeagleBone Green that has replaced the wired
-Ethernet interface with a built-in Wifi radio. It is otherwise highly
-compatible with the BeagleBone Green. It sells for about USD $53.</p>
-<p>The BeagleBone Green Wireless uses the same kernel as the BeagleBone, with a
-different device tree.</p>
-<p>MuntsOS does not currently support the on-board Bluetooth radio.</p>
-<p>The BeagleBone Green Wireless is a mixed blessing: It has 4 USB ports and
-on-board WiFi, but commandeers quite a few of the expansion header GPIO pins
-for the on-board radios. Among other things, this seems to prohibit using
-<b><tt>SPI1</tt></b>. Also, the physical layout prevents using the <a href=
-"https://www.mikroe.com/beaglebone">BeagleBone Click Shield</a>, which has some
-advantages over the newer <a href=
-"https://www.mikroe.com/beaglebone-mikrobus-cape">mikroBus Cape</a>.</p>
-<h3>PocketBeagle</h3>
-<p>The <a href="https://beagleboard.org/pocket">PocketBeagle</a> is a cost and
-size reduced version of the BeagleBone Black. It currently sells for about USD
-$25 and is intended for the same market niche as the Rasperry Pi Zero. Although
-considerably more expensive than either version of the Raspberry Pi Zero, the
-PocketBeagle has many more I/O devices directly accessible from its expansion
-headers.</p>
-<p>The PocketBeagle uses the same kernel as the BeagleBone, with a different
-device tree. The PocketBeagle device tree enables the following devices on its
-two 36-pin <a href=
-"http://git.munts.com/muntsos/doc/PocketBeaglePinout.pdf">expansion
-headers</a>:</p>
-<ul>
-<li>USB host port</li>
-<li>I<sup>2</sup>C bus controller device <b><tt>/dev/i2c-1</tt></b></li>
-<li>I<sup>2</sup>C bus controller device <b><tt>/dev/i2c-2</tt></b></li>
-<li>PWM output <b><tt>0:0</tt></b></li>
-<li>PWM output <b><tt>2:0</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS0</tt></b></li>
-<li>Serial port device <b><tt>/dev/ttyS4</tt></b></li>
-<li>SPI slave device <b><tt>/dev/spidev1.0</tt></b></li>
-<li>SPI slave device <b><tt>/dev/spidev2.1</tt></b></li>
-</ul>
-<p>The expansion headers are cleverly arranged such that the two inner rows
-match the <a href="https://www.mikroe.com/mikrobus">MikroElektronika
-mikroBUS</a> specification. If female sockets are installed on the top of the
-PocketBeagle, two <a href="https://shop.mikroe.com/click">Click Boards</a> can
-be plugged directly into the expansion headers.</p>
-<p>Like the Raspberry Pi Zero, the PocketBeagle comes without on-board eMMC,
-USB cable, micro-SD card, or expansion headers.</p>
-<p>Unlike the Raspberry Pi Zero, the PocketBeagle expansion headers do not
-match its progenitors, so BeagleBone capes cannot be used on it.</p>
 <h3>Raspberry Pi</h3>
 <p>The <a href="http://www.raspberrypi.com">Raspberry Pi</a> is a family of low
-cost Linux microcomputers selling for USD $5 to $75 (depending on model). There
+cost Linux microcomputers selling for USD $15 to $80, depending on model. There
 have been five generations of Raspberry Pi microcomputers, each using a
 successively more sophisticated Broadcom ARM core CPU. The first two
 generations (32-bit ARMv6 Raspberry Pi 1 and 32-bit ARMv7 Raspberry Pi 2) are
-now obsolete and no longer supported by MuntsOS Embedded Linux.</p>
+now obsolete.</p>
 <p>Some Raspberry Pi models have an on-board Bluetooth radio that uses the
 serial port signals that are brought out to the expansion header. By default,
 MuntsOS port disables the on-board Bluetooth radio, in favor of the serial port
@@ -363,11 +225,8 @@ separately but installed into the same directory tree as the parent
 cross-toolchain. I also build <a href="https://www.freepascal.org">Free
 Pascal</a> cross-compilers. Each of these rely on the libraries contained in
 the corresponding GCC cross-toolchain package.</p>
-<p>The BeagleBone platform requires a 32-bit an ARMv7 cross-toolchain carefully
-tuned for its CPU and FPU cores while all 64-bit ARMv8 platforms use the same
-AArch64 cross-toolchain.</p>
 <p>Cross-toolchain packages built for <a href=
-"https://www.debian.org">Debian</a> Linux (both x86-64 and ARM64) development
+"https://www.debian.org">Debian</a> Linux (x86-64 <i>and</i> ARM64) development
 host computers are available at:</p>
 <a href="http://repo.munts.com/debian12">http://repo.munts.com/debian12</a>
 <p>x86-64 RPM packages containing the exact same binaries and known to work on
