Now supporting Modula-2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21806 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -46,6 +46,14 @@ other things, the MuntsOS startup scripts (<b><tt>/etc/rc</tt></b>) and friends
 have been extensively reworked to prevent race conditions. These changes also
 improve the system boot time. Support for the Raspberry 5 and the Orange Pi
 Zero 2 W is under development.</li>
+<br>
+<li>13 January 2024 -- You can now write programs for MuntsOS in Modula-2, for
+which support was merged into GCC 13. During the late 1980's and early 1990's,
+there was a lot of interest in Modula-2 as a system programming language, a
+more robust alternative to C. As a student and beginning software engineer, I
+spent real money on at least three different Modula-2 compilers for DOS.<br>
+Some platform modules and test programs have been moved from <b>libsimpleio</b>
+to <b><tt>muntsos/examples/modula2/</tt>.</b></li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
