Upgraded libcurl to 8.5.0 and libnl to 3.9.0.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21814 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -54,6 +54,11 @@ more robust alternative to C. As a student and beginning software engineer, I
 spent real money on at least three different Modula-2 compilers for DOS.<br>
 Some platform modules and test programs have been moved from <b>libsimpleio</b>
 to <b><tt>muntsos/examples/modula2/</tt>.</b></li>
+<br>
+<li>13 January 2024 -- Upgraded libcurl to 8.5.0. Upgraded libnl to 3.9.0. Took
+advantage of the opportunity to fix the cross-tool package dependency chains.
+Now if you remove the gcc package, all the corresponding free pascal compiler
+and library packages will be removed as well.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
