I meant setup-fedora
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21921 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -72,7 +72,7 @@ Ethernet connector.</li>
 testing and verification needs to be performed.</li>
 <br>
 <li>24 January 2024 -- Reworked the RPM setup scripts <a href=
-"http://git.munts.com/muntsos/scripts/setup-debian">setup-debian</a> and
+"http://git.munts.com/muntsos/scripts/setup-fedora">setup-fedora</a> and
 <a href="http://git.munts.com/muntsos/scripts/setup-rhel">setup-rhel</a> to
 improve the user experience and to interoperate with <a href=
 "https://alire.ada.dev">Alire</a> better. Verified on Fedora 39 and RHEL
