Implemented BeagleBone Style GPIO pin management.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21939 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -83,6 +83,12 @@ few issues found. I did have to implement a fix for a breaking GPIO API change,
 though, described in <a href=
 "http://git.munts.com/muntsos/doc/AppNote11-link-gpiochip.pdf">Application Note
 #11</a>.</li>
+<br>
+<li>26 January 2026 -- I have now implemented <i>BeagleBone Style</i> GPIO pin
+configuration managment for 64-bit Raspberry Pi boards, using the
+<b><tt>pinctrl</tt></b> command imported from Raspberry Pi OS. See <a href=
+"http://git.munts.com/muntsos/doc/AppNote12-pinctrl.pdf">Application Note
+#12</a> for more information.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
